- upgrade to java 22 - enable preview features by default